Checkouts are saved as order and viewable in order history

--- a/src/main/resources/public/views/order-history/order-history.html
+++ b/src/main/resources/public/views/order-history/order-history.html
@@ -6,7 +6,7 @@
       <thead>
         <tr>
           <th>ID</th>
-          <th>Products</th>-->
+          <th>Products</th>
           <th>Total</th>
           <th>Date</th>
         </tr>
